// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components NavigationBar should render the login view if a logout function is not passed 1`] = `
<div
  className="navigation-bar"
>
  <ul>
    <li
      className="auth"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Log In
      </button>
    </li>
  </ul>
</div>
`;

exports[`components NavigationBar should render the logout view if a logout function is passed 1`] = `
<div
  className="navigation-bar"
>
  <ul>
    <li
      className="profile"
    />
    <li
      className="auth"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Log Out
      </button>
    </li>
  </ul>
</div>
`;

exports[`components NavigationBar should render the logout view with a username if a logout function and username are passed 1`] = `
<div
  className="navigation-bar"
>
  <ul>
    <li
      className="profile"
    >
      username
    </li>
    <li
      className="auth"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Log Out
      </button>
    </li>
  </ul>
</div>
`;
